styles.css
/* *, *::after, *::before{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
} */
@import "reset.css" layer(reset);

:root{
    --teal: #087f8c;
    --orange: #f26430;
    --beige: #d8cbc7;
    --dark: #2c2c34;
    --lightgreen: #c7d3bf;
}

body{
    font-family: sans-serif;
}

html{
    scroll-behavior: smooth;
}

.wrapper{
    max-inline-size: 1000px;
    margin-inline: auto;
}

h1{
    font-size: 5rem;
    color: #fff;
    height: 30rem;
    display: grid;
    place-content: center;
    text-align: center;
    text-shadow: rgb(0 0 0 / .7) 5px 5px 3px;
}


/* Header */

header{
    display: flex;
    justify-content: space-between;
    font-size: 1.1rem;
    font-weight: bold;
    background: rgb(0 0 0/ .6);
    position: fixed;
    inset:0 0 auto 0; /* top right bottom left */
    max-inline-size: 1000px;
    margin-inline: auto;
   
}

header p{
    font-size: 2rem;
    color: white;
    padding: 0.2em;
}

.primary-navigation{
    display: flex;
    margin-inline-end: 1em;
}


.primary-navigation ul{
    display: flex;
    gap: 1em;
}

.primary-navigation li{
    position: relative;
    list-style-type: none;
    inline-size: fit-content;
}

/* underline animation */
.primary-navigation li::before{
    content: "";
    position: absolute;
    width: 100%;
    height: 0px;
    border: 1px solid white;
    bottom: 10px;
    transform: scaleX(0);
    transition: all ease 0.3s;
}

.primary-navigation li:hover::before{
    transform: scaleX(1);
}

.primary-navigation a{
    color: white;
    text-decoration: none;
    block-size: stretch;
    display: grid;
    place-content: center;
}

/* about section */
.about-h1{
    background: url(./images/h1-bg.jpg) center/cover;
}

h2{
    font-size: 3rem;
    padding: 0.5em;
    text-align: center;
    margin-block: 1em;
    color: var(--teal);
    background-color: var(--lightgreen);
}

.grid-section{
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 2rem;
    place-items: center;

}

.grid-section img{
    inline-size: 100%;
    display: block;
}
.grid-section p{
    padding: 3rem;
    font-size: 1.2rem;
}

/* landmark-section */

.landmark-h1{
    background: url(./images/castle-pic.jpg) center/cover;
}

h3{
    font-size: 2rem;
    text-align: center;
    color: var(--teal);
}

/* cuisine section */

.cuisine-h1{
    background: url(./images/lebanese-cuisine.jpg) center/cover;
}

.cuisine{
    grid-template-columns: repeat(3, 1fr);
}

.cuisine p{
    padding: 1em;
}

/* Religion section */

.color-wheel{
    width: 15rem;
    height: 15rem;
    border-radius: 50%;
    background: conic-gradient( 
        #FF6B6B 0turn 0.322turn ,
        #FFD93D 0.322turn 0.634turn,
        #6BCB77 0.634turn 0.654turn,
        #4D96FF 0.654turn 0.814turn,
        #845EC2 0.814turn 0.9turn,
        #FF9671 0.9turn 0.95turn,
        #00C9A7 0.95turn 1turn);
}

.h1-religion{
    background: url(./images/h1-religion-bg.webp) center/cover;
}

.main-p{
    padding: 3rem;
    margin-block: 1em;
    font-size: 18px;
    background-color: var(--dark);
    color: var(--beige);
}

.color-wheel-container{
    padding: 3em;
    font-size: 1.2rem;
}

.color-wheel{
    margin-inline: auto;
}

.color-wheel-container li{
    list-style-type: square;
}

.color-wheel-container li::marker{
    font-size: 2rem;
}

.color-wheel-container li:nth-child(1)::marker{
    color: #FF6B6B;
}
.color-wheel-container li:nth-child(2)::marker{
    color: #FFD93D;
}
.color-wheel-container li:nth-child(3)::marker{
    color: #6BCB77;
}
.color-wheel-container li:nth-child(4)::marker{
    color: #4D96FF;
}
.color-wheel-container li:nth-child(5)::marker{
    color: #845EC2;
}
.color-wheel-container li:nth-child(6)::marker{
    color: #FF9671;
}
.color-wheel-container li:nth-child(7)::marker{
    color: #00C9A7;
}

.table-quote{
    padding: 3rem;
    margin-block: 2em;
    background-color: var(--dark);
    color: var(--beige);
    font-size: 1.2rem;
}

.data-table{
    border: 1px solid black;
    margin-inline: auto;
}

.data-table th, .data-table td{
    border: 1px solid black;
    padding: 0.5em;
}

.data-table caption{
    background-color: var(--lightgreen);
    color: var(--teal);
    padding: 0.7em;
    font-size: 1.4rem;
    border: 1px solid black;
}

.religion, .religion-total, .religion-header-info{
    background-color: var(--lightgreen);
    color: var(--teal);
    font-weight: bolder;
}

/* footer */

footer{
    background-color: var(--dark);
    color: var(--beige);
    text-align: center;
    padding: 1em;
    margin-block-start: 2em;
}

footer p{
    margin: 0.4em;
}

footer a{
    color: var(--beige);
    text-decoration: none;
}

footer a:hover{
    text-decoration: underline;
}

@media screen and (max-width:600px) {
    h1{
        font-size: 3rem;
    }

    h2{
        font-size: 2rem;
    }

    h3{
        font-size: 1.5rem;
    }

    .grid-section p{
        padding: 1em;
        font-size: 1rem;
    }
    .color-wheel{
        width: 7rem;
        height: 7rem;
    }

    .main-p, .table-quote{
        font-size: 1rem;
        padding: 1em;
    }
    .table-section{
        grid-template-columns: 1fr;
    }

    
}

@media screen and (max-width: 450px){
    .fix-section-overflow{
        grid-template-columns: 1fr;
    }

    .cuisine{
        gap: 0.5rem;
        grid-template-columns: 1fr;
    }

    .color-wheel-section{
        grid-template-columns: 1fr;
    }
}

